--- a/inc/4-solution.tex
+++ b/inc/4-solution.tex
@@ -13,7 +13,7 @@
 
 \begin{figure}[H]
 \includegraphics{plot_1_curves}
-\caption{}
+\caption{График потенциала, кажущихся сопротивлений потециал- и градиент-зондов в скважине}
 \label{fig:plot_1_curves}
 \end{figure}
 
@@ -27,32 +27,32 @@
 \begin{figure}[H]
 \centering
 \includegraphics{plot_1_tg_1}
-\caption{}
+\caption{Триангуляция}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics{plot_1_field_1}
-\caption{}
+\caption{Потенциальное поле}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_1_tg_2}
-\caption{}
+\caption{Триангуляция}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_1_field_2}
-\caption{}
+\caption{Потенциальное поле}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_1_palette}
-\caption{}
+\caption{Палетка кривых}
 \end{figure}
 
 Время вычисления палетки ${18 \text{ c } \pm 159 \text{ мс}}$, 7 проходов.
@@ -60,7 +60,7 @@
 
 \begin{figure}[H]
 \includegraphics{plot_1_compare}
-\caption{}
+\caption{Сравнение палетки кривых}
 \end{figure}
 
 
@@ -81,7 +81,7 @@
     третий слой &---& зона проникновения (${r_\text{пз} < r < r_\text{зп} = 5.8}$)
         с УЭС линейная функция от $r$ со значениями ${\rho_\text{зп}(r_\text{пз}) = \rho_\text{пз}}$
         и ${\rho_\text{зп}(r_\text{зп}) = \rho_\text{п}}$
-        с коэффициентом анизотропии $\lambda_\text{пз} = \lambda = 1.1$, \\
+        с коэффициентом анизотропии $\lambda_\text{зп} = \lambda = 1.1$, \\
     четвертый слой &---& пласт (${r > r_\text{зп}}$)
         с УЭС $\rho_\text{п}$
         с коэффициентом анизотропии $\lambda_\text{п} = \lambda = 1.1$.
@@ -89,7 +89,7 @@
 
 \begin{figure}[H]
 \includegraphics{plot_2_curves}
-\caption{}
+\caption{График потенциала, кажущихся сопротивлений потециал- и градиент-зондов в скважине}
 %\label{fig:plot}
 \end{figure}
 
@@ -102,39 +102,39 @@
 \begin{figure}[H]
 \centering
 \includegraphics{plot_2_tg_1}
-\caption{}
+\caption{Триангуляция}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics{plot_2_field_1}
-\caption{}
+\caption{Потенциальное поле}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_2_tg_2}
-\caption{}
+\caption{Триангуляция}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_2_field_2}
-\caption{}
+\caption{Потенциальное поле}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{plot_2_palette}
-\caption{}
+\caption{Палетка кривых}
 \end{figure}
 
 Время вычисления палетки ${16.5 \text{ c } \pm 176 \text{ мс}}$, 7 проходов.
 
 \begin{figure}[H]
 \includegraphics{plot_2_compare}
-\caption{}
+\caption{Сравнение палетки кривых}
 \end{figure}
 
 \clearpage
