--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -165,26 +165,6 @@ ${\varepsilon}$.
 Решение уравнения \eqref{eq:sympy} было получено посредством библиотеки Sympy в Python.
 
 
-\subsection{Построение двумерной сетки}
-
-%Краткое описание экспериментов, ссылки на литературу, библиотеки (triangle и др.).
-
-Для построения вершин шестиугольников использованы одномерные сетки: узлы решения для гиперболы
-и узлы, равноотстоящие в логарифмическом масштабе.
-Использована реализация триангуляции библиотеки triangle на Python c различными настройками:
-режимы добавления новых узлов, учет графа, значения ограничения снизу значений углов треугольников.
-
-\newcounter{exp}
-
-\refstepcounter{exp} \theexp \label{text_fullmesh}.
-Построены вершины шестиугольников из узлов решения для гиперболы.
-На рис. \ref{fig:fullmesh} Построены отрезки графа внутреннего и внешнего границ (граф изображен с красным цветом)
-и обозначена метка дыры (изображена красным крестиком), в которой исключена триангуляция.
-Вызвана триангуляция библиотеки triangle с настройкой 'pq30',
-где 'p' сообщает библиотеке о вводе графа, 'q30' --- ограничение снизу 30 градусов значений углов треугольников триангуляции.
-
-421 узлов.
-
 \newcommand{\addtwoimg}[3]{
 
   \begin{figure}[H]
@@ -212,121 +192,159 @@ ${\varepsilon}$.
   \end{figure}
 }
 
-\addtwoimg{exps/fullmesh_1}{}{}
-\addimg{exps/fullmesh_2}{}{fig:fullmesh}
+\newcommand{\addimgexp}[1]{
+  % \makeatletter
+  %   \def\meshfn{exps/}
+  %   \g@addto@macro\meshfn{#1}
+  %   \g@addto@macro\meshfn{_mesh}
+
+  %   \def\solvefn{exps/}
+  %   \g@addto@macro\solvefn{#1}
+  %   \g@addto@macro\solvefn{_solve}
+
+  %   \def\rhogfn{exps/}
+  %   \g@addto@macro\rhogfn{#1}
+  %   \g@addto@macro\rhogfn{_rhog}
+  % \makeatother
+
+  % \makeatletter
+  %   \g@addto@macro\meshlabel{#1}
+  %   \g@addto@macro\meshlabel{_mesh}
+
+  %   \g@addto@macro\solvelabel{#1}
+  %   \g@addto@macro\solvelabel{_solve}
+
+  %   \g@addto@macro\rhoglabel{#1}
+  %   \g@addto@macro\rhoglabel{_rhog}
+  % \makeatother
+
+  \addtwoimg{exps/#1_mesh}{Триангуляция}{fig:#1_mesh}
+  \addtwoimg{exps/#1_solve}{Решение потенциального поля}{fig:#1_solve}
+  \addimg{exps/#1_rhog}{Кажущееся сопротивление}{fig:#1_rhog}
+}
+
+
+\subsection{Построение двумерной сетки}
+
+%Краткое описание экспериментов, ссылки на литературу, библиотеки (triangle и др.).
+
+Для построения вершин шестиугольников использованы одномерные сетки: узлы решения для гиперболы
+и узлы, равноотстоящие в логарифмическом масштабе.
+Использована реализация триангуляции библиотеки triangle на Python c различными настройками:
+режимы добавления новых узлов, учет графа, значения ограничения снизу значений углов треугольников.
+
+\newcounter{exp}
+
+\refstepcounter{exp} \theexp \label{text_fullmesh}.
+Построены вершины шестиугольников из узлов решения для гиперболы.
+На рис. \ref{fig:fullmesh_1}--\ref{fig:fullmesh_2} построены отрезки графа внутреннего и внешнего границ (граф изображен с красным цветом)
+и обозначена метка дыры (изображена красным крестиком), в которой исключена триангуляция.
+Вызвана триангуляция библиотеки triangle с настройкой 'pq30',
+где 'p' сообщает библиотеке о вводе графа, 'q30' --- ограничение снизу 30 градусов значений углов треугольников триангуляции.
+
+421 узлов.
+
+\addtwoimg{exps/fullmesh_1}{Триангуляция}{fig:fullmesh_1}
+\addimg{exps/fullmesh_2}{Триангуляция}{fig:fullmesh_2}
 
 \stepcounter{exp} \theexp.
 Для расчетной сетки выбраны узлы, расположенные справа от оси ${r = 0}$,
-и построены сегменты половинов внутреннего и внешнего границ.
-Использованы лагранжевые элементы ${\mathcal{P}_1}$.
+и построены сегменты половинов внутреннего и внешнего границ,
+Использованы лагранжевые элементы ${\mathcal{P}_1}$ (рис. \ref{fig:1_mesh}--\ref{fig:1_rhog}).
 
-221 узлов.
-
-\newcommand{\addimgexp}[1]{
-  \makeatletter
-    \def\meshfn{exps/}
-    \g@addto@macro\meshfn{#1}
-    \g@addto@macro\meshfn{_mesh}
-
-    \def\solvefn{exps/}
-    \g@addto@macro\solvefn{#1}
-    \g@addto@macro\solvefn{_solve}
-
-    \def\rhogfn{exps/}
-    \g@addto@macro\rhogfn{#1}
-    \g@addto@macro\rhogfn{_rhog}
-  \makeatother
-
-  \addtwoimg{\meshfn}{Триангуляция}{}
-  \addtwoimg{\solvefn}{Решение потенциального поля}{}
-  \addimg{\rhogfn}{Кажущееся сопротивление}{}
-}
+Большая погрешность, негладкость \ref{fig:1_rhog}. 221 узлов в триангуляции.
 
 \addimgexp{1}
 
 \stepcounter{exp} \theexp.
-Использованы узлы, равноотстоящие в логарифмическом масштабе.
+Использованы узлы, равноотстоящие в логарифмическом масштабе (рис. \ref{fig:2_mesh}--\ref{fig:2_rhog}).
 
-1510 узлов.
+Большая погрешность, негладкость на рис. \ref{fig:2_rhog}. 1510 узлов в триангуляции.
 
 \addimgexp{2}
 
 \stepcounter{exp} \theexp.
-Добавлены сегменты на местах разрыва коэффициента УЭС.
+Добавлены сегменты на местах разрыва коэффициента УЭС (рис. \ref{fig:3_mesh}--\ref{fig:3_rhog}).
 
-7201 узлов.
+Погрешность большая, негладкость подобия осцилляции на рис. \ref{fig:3_rhog}. 7201 узлов в триангуляции.
 
 \addimgexp{3}
 
 \stepcounter{exp} \theexp.
-Использованы лагранжевые элементы ${\mathcal{P}_3}$.
+Использованы лагранжевые элементы ${\mathcal{P}_3}$ (рис. \ref{fig:4_mesh}--\ref{fig:4_rhog}).
 
-7201 узлов.
+Погрешность меньшая, негладкость подобия осцилляции на рис. \ref{fig:4_rhog}. 7201 узлов в триангуляции.
 
 \addimgexp{4}
 
 \refstepcounter{exp} \theexp \label{optimal}.
-Использован точечный источник вместо внутреннего граничного условия.
+Использован точечный источник вместо внутреннего граничного условия  (рис. \ref{fig:5_mesh}--\ref{fig:5_rhog}).
 
-6659 узлов.
+Погрешность меньшая, негладкость подобия осцилляции на рис. \ref{fig:5_rhog}. 6659 узлов в триангуляции.
 
 \addimgexp{5}
 
 \stepcounter{exp} \theexp.
-Добавлены на границе ${r = 0}$ узлы одномерной сетки.
+Добавлены на границе ${r = 0}$ узлы одномерной сетки (рис. \ref{fig:6_mesh}--\ref{fig:6_rhog}).
 
-6845 узлов.
+Погрешность меньшая, негладкость подобия осцилляции на рис. \ref{fig:6_rhog}. 6845 узлов в триангуляции.
 
 \addimgexp{6}
 
 \refstepcounter{exp} \theexp.
-Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы ${\mathcal{P}_2}$.
+Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы ${\mathcal{P}_2}$
+(рис. \ref{fig:7_mesh}--\ref{fig:7_rhog}).
 
-156856 узлов.
+Практически идеальный результат на рис. \ref{fig:7_rhog}. 156856 узлов в триангуляции.
 
 \addimgexp{7}
 
 \refstepcounter{exp} \theexp \label{best}.
 Использованы узлы, равноотстоящие в логарифмическом масштабе;
 узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами,
-отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle.
+отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle
+(рис. \ref{fig:8_mesh_1}--\ref{fig:8_rhog}).
 
-2859 узлов.
-
-\begin{figure}[H]
-\includegraphics{exps/last_curves}
-\caption{Кажущееся сопротивление}
-%\label{fig:plot}
-\end{figure}
+Практически идеальный результат на рис. \ref{fig:8_rhog}. 2859 узлов в триангуляции.
 
 \begin{figure}[H]
 \includegraphics{exps/last_tg_1}
 \caption{Триангуляция}
-%\label{fig:plot}
+\label{fig:8_mesh_1}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{exps/last_field_1}
 \caption{Решение потенциального поля}
-%\label{fig:plot}
+\label{fig:8_field_1}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{exps/last_tg_2}
 \caption{Триангуляция}
-%\label{fig:plot}
+\label{fig:8_mesh_2}
 \end{figure}
 
 \begin{figure}[H]
 \includegraphics{exps/last_field_2}
 \caption{Решение потенциального поля}
-%\label{fig:plot}
+\label{fig:8_field_2}
+\end{figure}
+
+На рис. \ref{fig:8_field_2} наблюдается разрыв градиента потенциального поля на границе области скважины
+и сингулярность поля в точке источника потенциала,
+означает, что это не классичекое решение задачи, а более общее -- обобщенное решение задачи. 
+
+\begin{figure}[H]
+\includegraphics{exps/last_curves}
+\caption{Кажущееся сопротивление}
+\label{fig:8_rhog}
 \end{figure}
 
 
 \subsection{Результаты}
 
-Лучший результат получен в эксперименте \ref{best} за ${538 \text{ мc } \pm 37.8 \text{ мс }}$, 7 проходов
+Оптимальный результат получен в эксперименте \ref{best} за ${538 \text{ мc } \pm 37.8 \text{ мс }}$, 7 проходов
 (${\text{среднее значение} \pm \text{среднеквадратичное отклонение}}$ от 7 проходов, в каждом проходе 1 цикл). Использованы узлы, равноотстоящие в логарифмическом масштабе; узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами, отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle. Использован компьютер для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами ($1 \text{ физический процессор} \times 2 \text{ ядра в физическом процессоре} \times 2 \text{ потока в каждом ядре}$)..
 
 В результате проведённых численных экспериментов разработан метод построения оптимальных сеток для решения задачи БКЗ на сетке, позволяющий получить приемлимое численное решение с меньшими затратами ресурсов. В данном случае мы следили за двумя параметрами: гладкостью решения и сравнением "на глаз" с известной палеткой. Поскольку принятая методика решения обратной задачи БКЗ основано на использованием палеток на "сравнении на глаз", то такой критерий годится. Относительная ошибка примерно ${<10}$ \%.
