--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \begin{document}
 
 %\input{inc/0-title} % Титульный лист
-\includepdf{extra/title_signed}
+\includepdf{extra/title}
 
 \tableofcontents % Содержание 
 \clearpage
