--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -17,18 +17,9 @@
 \frametitle{\insertsection}
 
 \begin{itemize}    
-    \item Задачи электрокаротажа нелинейны, а обратная
-    задача определения параметров по измерениям
-    некорректна (неоднозначна). Решение задач в
-    полных постановках весьма ресурсоемко и плохо
-    подходит для промышленного применения
-
-    \item На практике возникает необходимость в палетках с такими параметрами,
-    которые не опубликованы. Поэтому была поставлена задача разработки метода
-    решения прямой задачи БКЗ, которая позволила бы задавать необходимые
-    параметры модели для построения палеток
-
-    \item Решение краевой задачи в математической постановке прямой задачи БКЗ неэффективно уже имеющимися средствами
+    \item Решение полных постановок задач весьма ресурсоемко
+    \item Задача разработки метода решения прямой задачи БКЗ
+    \item Решение математической постановки прямой задачи БКЗ неэффективно уже имеющимися средствами
 \end{itemize}
 \end{frame}
 
@@ -49,7 +40,8 @@
     \item Библиотека на Python triangle для триангуляции Делоне
     \item Компьютер: операционная система
     Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими
-    процессорами
+    процессорами (1 физический процессор $\times$ 2 ядра в физическом процессоре $\times$
+    2 потока в каждом ядре)
 \end{itemize}
 \end{frame}
 
@@ -90,8 +82,11 @@
     \item Время вычисления расчетной палетки ${16.5 \text{ c } \pm 176 \text{ мс}}$, 7 проходов
 \end{itemize}
 
-Наблюдается совпадение, означает, что способ решения верный и точный
-
+\textbf{Критерии точности решения}:
+\begin{itemize}
+    \item гладкость решения
+    \item сравнение "на глаз" решения с известным
+\end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
@@ -102,15 +97,19 @@
 \frametitle{\insertsection}
 
 \begin{itemize}
-    \item Освоены пакеты программ для параллельных вычислений: вычислительная платформа для автоматического решения ДУЧП FEniCS, библиотека Python для векторных вычислений Numpy
+    \item Освоены пакеты программ для параллельных вычислений
     \item Проведены расчеты и сопоставление с известными результатами в литературе
-    \item Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью
-    \item Все вычисления произведены на компьютере: операционная система
-    Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими
-    процессорами (1 физический процессор × 2 ядра в физическом процессоре ×
-    2 потока в каждом ядре)
+    \item Показана применимость метода решения прямой задачи БКЗ
 \end{itemize}
-
 \end{frame}
 
 %-------------------------------------------------------------------------------
+
+\section{Конец}
+
+\begin{frame}
+\centering
+\vfill
+\textcolor{Blue}{\Large Спасибо за внимание!}
+\vfill
+\end{frame}
