--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -32,16 +32,10 @@
 
 \textbf{Инструменты:}
 \begin{itemize}
-    \item Язык программирования Python c программными пакетами для паралелльных вычислений
-
-    \item FEniCS — популярная вычислительная платформа с открытым исходным
-    кодом (LGPLv3) для решения уравнений в частных производных (ДУЧП). Основано на методе конечных элеметнов, имеет интерфейс на Python
-
-    \item Библиотека на Python triangle для триангуляции Делоне
-    \item Компьютер: операционная система
-    Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими
-    процессорами (1 физический процессор $\times$ 2 ядра в физическом процессоре $\times$
-    2 потока в каждом ядре)
+    \item Язык программирования Python
+    \item Вычислительная платформа FEniCS
+    \item Модуль triangle для триангуляции Делоне
+    \item Компьютер: ОС Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц
 \end{itemize}
 \end{frame}
 
