--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -1,6 +1,7 @@
 %!TEX TS-program = xelatex
 
 \documentclass[xetex,mathserif,serif,t]{beamer}
+% \usefonttheme[onlymath]{serif}
 % Если хотим соотношение сторон 16:9
 % \documentclass[aspectratio=169,xetex,mathserif,serif,t]{beamer}
 
@@ -8,7 +9,11 @@
 \usetheme{MasterThesis} % Тема
 
 %%% Работа с русским языком
-\usepackage{fontspec,xunicode,xltxtra}
+\usepackage{amsmath} % Математика
+\usepackage{mathtools}
+\usepackage{mathspec} % XeTeX
+% \usepackage[no-math]{fontspec}
+\usepackage{xunicode,xltxtra}
 
 \defaultfontfeatures{Ligatures=TeX} % Для преобразования -- и ---
 \setmainfont{PT Sans}
@@ -20,7 +25,7 @@
 \newtheorem{rexample}{Пример}
 
 %%% Дополнительная работа с математикой
-\usepackage{amsmath,amsfonts,amssymb,amsthm,mathtools} % AMS
+\usepackage{amsfonts,amssymb,amsthm} % AMS
 \usepackage{icomma} % "Умная" запятая: $0,2$ --- число, $0, 2$ --- перечисление
 
 %%% Свои команды
@@ -51,6 +56,8 @@
 
 %%% Картинки
 \usepackage{tikz,calc,ifthen,color}
+
+\usepackage{bm}
 
 \title{Решение прямой задачи бокового каротажного зондирования методами численного моделирования}
 \subtitle{Выпускная квалификационная работа по программе бакалавриата на тему:}
