--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -32,8 +32,8 @@
 
 \textbf{Математическая постановка:}
 \begin{alignat}{2}
-\nabla \cdot (\nabla u(\bm x) / \rho(\bm x)) &= -I \delta(\bm x),\qquad && \bm x \in \Omega, \label{eq:poisson}\\
-u(\bm x) &= 0, && \bm x \in \partial \Omega. \label{eq:dirichet}
+\nabla \cdot (\nabla u(\bm x) / \rho(\bm x)) &= -I \delta(\bm x),\qquad && \bm x \in \varOmega, \label{eq:poisson}\\
+u(\bm x) &= 0, && \bm x \in \partial \varOmega. \label{eq:dirichet}
 \end{alignat}
 \end{frame}
 
