--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -30,11 +30,11 @@
 \end{itemize}
 \bigskip
 
-\textbf{Краевая задачв:}
-\begin{alignat}{2}
-\nabla \cdot (\nabla u(\bm x) / \rho(\bm x)) &= -I \delta(\bm x),\qquad && \bm x \in \varOmega, \label{eq:poisson}\\
-u(\bm x) &= 0, && \bm x \in \partial \varOmega. \label{eq:dirichet}
-\end{alignat}
+\textbf{Краевая задача:}
+\begin{alignat*}{2}
+\nabla \cdot (\nabla u(\bm x) / \rho(\bm x)) &= -I \delta(\bm x),\qquad && \bm x \in \varOmega, \\
+u(\bm x) &= 0, && \bm x \in \partial \varOmega.
+\end{alignat*}
 \end{frame}
 
 \begin{frame}
