--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -72,7 +72,7 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \begin{frame}
 \frametitle{\insertsection}
 
-Расчетная сетка:
+\textbf{Расчетная сетка:}
 \begin{itemize}
 \item расположения узлов на расчетной области
 \begin{itemize}
@@ -85,7 +85,7 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \end{itemize}
 \bigskip
 
-Решение методом конечных элементов на расчетной сетке:
+\textbf{Метод конечных элементов:}
 \begin{itemize}
     \item степень полинома
 \end{itemize}
@@ -94,7 +94,7 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \begin{frame}
 \frametitle{\insertsection}
 
-Оптимальная расчетная схема:
+\textbf{Оптимальная расчетная схема:}
 \begin{itemize}
     \item узлы на лучах
     \item вторая степень полинома
