--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -103,11 +103,11 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \end{itemize}
 
 \begin{minipage}[t]{0.47\linewidth}
-    \center{\includegraphics[width=1\linewidth]{plot_2_tg_1}}
+    \center{\includegraphics[width=1\linewidth]{model_2_mesh_1_pres.pdf}}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.47\linewidth}
-    \center{\includegraphics[width=1\linewidth]{plot_2_tg_2}}
+    \center{\includegraphics[width=1\linewidth]{model_2_mesh_2_pres.pdf}}
 \end{minipage}
 \end{frame}
 
@@ -121,12 +121,12 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \vspace{-0.5cm}
 \begin{minipage}[t]{0.47\linewidth}
     \textbf{Модель 1}
-    \center{\includegraphics[width=1\linewidth]{model_2_mesh_1_pres.pdf}}
+    \center{\includegraphics[width=1\linewidth]{plot_1_compare}}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.47\linewidth}
     \textbf{Модель 2}
-    \center{\includegraphics[width=1\linewidth]{model_2_mesh_2_pres.pdf}}
+    \center{\includegraphics[width=1\linewidth]{plot_2_compare}}
 \end{minipage}
 
 \end{frame}
