--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -168,8 +168,9 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 
 \begin{itemize}
     \item Освоены пакеты программ для параллельных вычислений
-    \item Проведены расчеты и сопоставление с известными результатами в литературе
-    \item Показана применимость метода решения прямой задачи БКЗ
+    \item Разработаны прототипы программ
+    \item Проведены расчеты и сопоставление
+    \item Показана применимость метода решения
 \end{itemize}
 \end{frame}
 
