--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -62,7 +62,7 @@ u(\bm x) &= 0, && \bm x \in \partial \varOmega.
 \begin{itemize}
     \item Язык программирования Python
     \item Вычислительная платформа FEniCS
-    \item Модуль triangle
+    \item Библиотека triangle
     \item Компьютер: ОС Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц
 \end{itemize}
 \end{frame}
